# DataScienceFromScratch

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: pytest.yaml
src/: __init__.py  errors.py  types.py
src/algelin/: __init__.py  matrix.py  vetores.py
src/estatistica/: basic_stats.py
tests/: test_algelin copy.py  test_algelin.py  test_estatistica.py
